; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_md.c_mdstat_poll.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_md.c_mdstat_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.seq_file* }
%struct.seq_file = type { %struct.mdstat_info* }
%struct.mdstat_info = type { i64 }

@md_event_waiters = common dso_local global i32 0, align 4
@POLLIN = common dso_local global i32 0, align 4
@POLLRDNORM = common dso_local global i32 0, align 4
@md_event_count = common dso_local global i32 0, align 4
@POLLERR = common dso_local global i32 0, align 4
@POLLPRI = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i32*)* @mdstat_poll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mdstat_poll(%struct.file* %0, i32* %1) #0 {
  %3 = alloca %struct.file*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.seq_file*, align 8
  %6 = alloca %struct.mdstat_info*, align 8
  %7 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load %struct.file*, %struct.file** %3, align 8
  %9 = getelementptr inbounds %struct.file, %struct.file* %8, i32 0, i32 0
  %10 = load %struct.seq_file*, %struct.seq_file** %9, align 8
  store %struct.seq_file* %10, %struct.seq_file** %5, align 8
  %11 = load %struct.seq_file*, %struct.seq_file** %5, align 8
  %12 = getelementptr inbounds %struct.seq_file, %struct.seq_file* %11, i32 0, i32 0
  %13 = load %struct.mdstat_info*, %struct.mdstat_info** %12, align 8
  store %struct.mdstat_info* %13, %struct.mdstat_info** %6, align 8
  %14 = load %struct.file*, %struct.file** %3, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @poll_wait(%struct.file* %14, i32* @md_event_waiters, i32* %15)
  %17 = load i32, i32* @POLLIN, align 4
  %18 = load i32, i32* @POLLRDNORM, align 4
  %19 = or i32 %17, %18
  store i32 %19, i32* %7, align 4
  %20 = load %struct.mdstat_info*, %struct.mdstat_info** %6, align 8
  %21 = getelementptr inbounds %struct.mdstat_info, %struct.mdstat_info* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = call i64 @atomic_read(i32* @md_event_count)
  %24 = icmp ne i64 %22, %23
  br i1 %24, label %25, label %31

25:                                               ; preds = %2
  %26 = load i32, i32* @POLLERR, align 4
  %27 = load i32, i32* @POLLPRI, align 4
  %28 = or i32 %26, %27
  %29 = load i32, i32* %7, align 4
  %30 = or i32 %29, %28
  store i32 %30, i32* %7, align 4
  br label %31

31:                                               ; preds = %25, %2
  %32 = load i32, i32* %7, align 4
  ret i32 %32
}

declare dso_local i32 @poll_wait(%struct.file*, i32*, i32*) #1

declare dso_local i64 @atomic_read(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
